# codon_tools_v02

./: .gitignore  README.md  pyproject.toml  setup.sh
codon_tools/: codon_analyzer.py  codon_optimizer.py  codon_shuffler.py
examples/: GFP_de-CpG.py  GFP_muts2stop.py  codon_deoptimize.py  recode_to_reference.py  target_codon_freqs.py
examples/fasta/: miRFP670nano3.fasta
notebooks/: Colab_recode_sequence.ipynb  recode_sequence.ipynb
