[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codon_tools"
version = "0.2"
description = "Toolkit to manipulate synonymous codon usage in various ways"
authors = [
  { name="Claus O. Wilke", email="wilke@austin.utexas.edu" },
  { name="Luiz C. Vieira", email="luiz.vieira@austin.utexas.edu" }
]
license = "MIT"
dependencies = [
  "biopython>=1.87",
  "numpy>=1.25.2"
]

[tool.setuptools]
packages = ["codon_tools"]